--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <link rel="stylesheet" href="D:\website meat up\bootstrap\css\bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap\css\bootstrap.min.css">
 </head>
 
 <body style = "background-color:#C3EFC3">
@@ -246,7 +246,7 @@
   color: red;
 }
 .banner{
-  background: url("images/Benner.png") no-repeat;
+  background: url("images/banner.png") no-repeat;
   opacity:0.7;
   height: 70vh;
   background-size: cover;
@@ -365,11 +365,11 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  height: 300px;
+  height: 200px;
   width: 90%;
   }
   .banner{
-  background: url("images/Banner.png") no-repeat;
+  background: url("images/banner.png") no-repeat;
   background-position: center;
   background-size:100% 50%;
   opacity:0.7;
@@ -377,9 +377,9 @@
   }
   .column {
   margin:0 0 3% 3% ;
-  width: 25%;
+  width: 28%;
   border-radius: 10px;
-  height: 325px; /* Hanya untuk contoh */
+  height: 400px; /* Hanya untuk contoh */
   }
 /* Hapus floats setelah columns */
   .label {
