--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
   color: red;
 }
 .banner{
-  background: url("images/Benner.png") no-repeat;
+  background: url("images/benner.png") no-repeat;
   opacity:0.7;
   height: 70vh;
   background-size: cover;
@@ -325,6 +325,14 @@
   }
 }
 @media (max-width: 868px) {
+  .menu-list li a{
+  color: black;
+  font-size: 12px;
+  font-weight: bold;
+  margin-left: 15px;
+  text-decoration: none;
+  transition: all 0.3s ease;
+  }
   .centerimg {
   display: block;
   margin-left: auto;
@@ -333,7 +341,7 @@
   width: 90%;
   }
   .banner{
-  background: url("images/Banner.png") no-repeat;
+  background: url("images/banner.png") no-repeat;
   background-position: center;
   background-size:100% 50%;
   opacity:0.7;
