--- a/index.html
+++ b/index.html
@@ -325,6 +325,11 @@
   }
 }
 @media (max-width: 868px) {
+  .navbar .logo a{
+  margin-right: 100px;
+  color: #fff;
+  text-decoration: none;
+  }
   .menu-list li a{
   color: black;
   font-size: 12px;
