--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
         <div class="text-center">
           <img src="images/BURGER_SINGLE-remove.png" class="gambar-menu"><br><br>
           <h4>Burger Single</h4>
-          <label class="keterangan-menu">Burger Kaya Daging Spesial Meat-Up Dengan 1 Patty</label><br><br>
           <label class="coret">Rp 30.000</label><br>
           <label class="harga">Rp 25.000</label><br><br>
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal1">Lihat Gambar</button></div>
@@ -86,7 +85,6 @@
         <div class="text-center">
           <img src="images/BURGER_DOUBLE-remove.png" class="gambar-menu"><br><br>
           <h4>Burger Double</h4>
-          <label class="keterangan-menu">Burger Kaya Daging Spesial Meat-Up Dengan 2 Patty</label><br><br>
           <label class="coret">Rp 35.000</label><br>
           <label class="harga">Rp 30.000</label><br><br>
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal2">Lihat Gambar</button>
@@ -96,7 +94,6 @@
         <div class="text-center">
           <img src="images/BURGER_TRIPLE.png" class="gambar-menu"><br><br>
           <h4>Burger Triple</h4>
-          <label class="keterangan-menu">Burger Kaya Daging Spesial Meat-Up Dengan 3 Patty</label><br><br>
           <label class="coret">Rp 40.000</label><br>
           <label class="harga">Rp 35.000</label><br><br>
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal3">Lihat Gambar</button></div>
@@ -113,7 +110,8 @@
           <h5 class="modal-title" id="exampleModalLabel">Burger Single</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div><br>
-          <img class="centerimg" src="images/BURGER_SINGLE-remove.png" style= "width: 350px; height:300px;"><br>
+          <img class="centerimg" src="images/BURGER_SINGLE-remove.png" style= "width: 350px; height:300px;"><br><br>
+           <label class="keterangan-menu">Burger Kaya Daging Spesial Meat-Up Dengan 1 Patty</label>
       </div>
     </div>
   </div>
@@ -124,7 +122,9 @@
           <h5 class="modal-title" id="exampleModalLabel">Burger Double</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div><br>
-          <img class="centerimg" src="images/BURGER_DOUBLE-remove.png" style="width:350px; height:300px;"><br>
+          <img class="centerimg" src="images/BURGER_DOUBLE-remove.png" style="width:350px; height:300px;"><br><br>
+          <label class="keterangan-menu">Burger Kaya Daging Spesial Meat-Up Dengan 2 Patty</label>
+
       </div>
     </div>
   </div>
@@ -135,7 +135,8 @@
           <h5 class="modal-title" id="exampleModalLabel">Burger Triple</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div><br>
-          <img class="centerimg" src="images/BURGER_TRIPLE-remove.png" style="width:350px; height:300px;"><br>
+          <img class="centerimg" src="images/BURGER_TRIPLE-remove.png" style="width:350px; height:300px;"><br><br>
+          <label class="keterangan-menu">Burger Kaya Daging Spesial Meat-Up Dengan 3 Patty</label><br><br>
       </div>
     </div>
   </div>
@@ -386,14 +387,13 @@
   }
   .keterangan-menu{
   font-size: 12px;
-  text-align: justify;
+  text-align: center;
   padding-left: 0px;
   }
   .harga{
   font-weight: bold;
   font-size: 12px;
   text-align: center;
-  padding-left: 0px; 
   }
   .coret {
   font-size: 12px;
