--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="row">
       <h3> Menu</h3>
       <div class="column">
-        <div class="text-center">
+        <div class="text-center"><br>
           <img src="images/BURGER_SINGLE-remove.png" class="gambar-menu"><br><br>
           <h4>Burger Single</h4>
           <label class="coret">Rp 30.000</label><br>
@@ -82,7 +82,7 @@
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal1">Lihat Gambar</button></div>
       </div>
       <div class="column">
-        <div class="text-center">
+        <div class="text-center"><br>
           <img src="images/BURGER_DOUBLE-remove.png" class="gambar-menu"><br><br>
           <h4>Burger Double</h4>
           <label class="coret">Rp 35.000</label><br>
@@ -91,7 +91,7 @@
         </div>
       </div>
       <div class="column">
-        <div class="text-center">
+        <div class="text-center"><br>
           <img src="images/BURGER_TRIPLE.png" class="gambar-menu"><br><br>
           <h4>Burger Triple</h4>
           <label class="coret">Rp 40.000</label><br>
@@ -111,7 +111,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div><br>
           <img class="centerimg" src="images/BURGER_SINGLE-remove.png" style= "width: 350px; height:300px;"><br><br>
-           <label class="keterangan-menu">Burger Kaya Daging Spesial Meat-Up Dengan 1 Patty</label>
+           <label class="keterangan-menu">Burger Kaya Daging Spesial Meat-Up Dengan 1 Patty</label><br><br>
       </div>
     </div>
   </div>
@@ -123,8 +123,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div><br>
           <img class="centerimg" src="images/BURGER_DOUBLE-remove.png" style="width:350px; height:300px;"><br><br>
-          <label class="keterangan-menu">Burger Kaya Daging Spesial Meat-Up Dengan 2 Patty</label>
-
+          <label class="keterangan-menu">Burger Kaya Daging Spesial Meat-Up Dengan 2 Patty</label><br><br>
       </div>
     </div>
   </div>
@@ -386,7 +385,7 @@
   align-items: center;
   }
   .keterangan-menu{
-  font-size: 12px;
+  font-size: 15px;
   text-align: center;
   padding-left: 0px;
   }
