--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 }
 @media (max-width: 868px) {
   .navbar .logo a{
-  margin-right: 100px;
+  margin-right: 0;
   color: #fff;
   text-decoration: none;
   }
@@ -334,7 +334,7 @@
   color: black;
   font-size: 12px;
   font-weight: bold;
-  margin-left: 15px;
+  margin-left: 10px;
   text-decoration: none;
   transition: all 0.3s ease;
   }
@@ -342,7 +342,7 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  height: 300px;
+  height: 200px;
   width: 90%;
   }
   .banner{
@@ -350,7 +350,10 @@
   background-position: center;
   background-size:100% 50%;
   opacity:0.7;
-  height: 50vh;
+  height: 40vh;
+  }
+  .row{
+  padding-left: 10%;
   }
   .column {
   margin:0 0 3% 3% ;
