--- a/index.html
+++ b/index.html
@@ -325,6 +325,10 @@
   }
 }
 @media (max-width: 868px) {
+  .logo {
+    height:20px;
+    width:20px;
+  }
   .navbar .logo a{
   margin-right: 0;
   color: #fff;
