--- a/index.html
+++ b/index.html
@@ -325,9 +325,9 @@
   }
 }
 @media (max-width: 868px) {
-  .logo {
-    height:20px;
-    width:20px;
+  .navbar .logo {
+    height:15px;
+    width:15px;
   }
   .navbar .logo a{
   margin-right: 0;
