--- a/index.html
+++ b/index.html
@@ -313,15 +313,36 @@
   .content{
     padding: 0 60px;
   }
+  .banner {
+  background: url("images/banner.png") no-repeat;
+  background-position: center;
+  background-size:100% 50%;
+  opacity:0.7;
+  height: 40vh;
+  }
 }
 @media (max-width: 1100px) {
   .content{
     padding: 0 40px;
   }
+  .banner {
+  background: url("images/banner.png") no-repeat;
+  background-position: center;
+  background-size:100% 50%;
+  opacity:0.7;
+  height: 40vh;
+  }
 }
 @media (max-width: 900px) {
   .content{
     padding: 0 30px;
+  }
+  .banner {
+  background: url("images/banner.png") no-repeat;
+  background-position: center;
+  background-size:100% 50%;
+  opacity:0.7;
+  height: 40vh;
   }
 }
 @media (max-width: 868px) {
@@ -329,8 +350,6 @@
   }
   .navbar .logo a{
   margin-right: 0;
-  height:15px;
-  width:15px;
   color: #fff;
   text-decoration: none;
   }
