--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li><a href="#Beranda">Beranda</a></li>
         <li><a href="#Menu">Menu</a></li>
         <li><a href="#Fitur">Fitur</a></li>
-        <li><a href="#Lokasi">Lokasi</a></li>
+        <li><a href="#Testimoni">Lokasi</a></li>
         <li><a href="#Download">Download</a></li>
       </ul>
       <div class="icon menu-btn">
@@ -67,8 +67,6 @@
     <!--<video width="100%" height="100%" muted playsinline preload="metadata"  src="https://www.youtube.com/embed/HXDD7-EnGBY"></video>-->
     <br></br>
   </section>
-
-  
 
   <section class="Menu" id="Menu">
     <div class="row">
@@ -147,10 +145,42 @@
       <br></br>
   </section>
   
+  <section class="Testimoni" id="Testimoni">
+    <div class="row">
+      <h3> Menu</h3>
+      <div class="column">
+        <div class="text-center"><br>
+          <img src="images/BURGER_SINGLE-remove.png" class="gambar-menu"><br><br>
+          <h4>Burger Single</h4>
+          <label class="coret">Rp 30.000</label><br>
+          <label class="harga">Rp 25.000</label><br><br>
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal1">Lihat Gambar</button></div>
+      </div>
+      <div class="column">
+        <div class="text-center"><br>
+          <img src="images/BURGER_DOUBLE-remove.png" class="gambar-menu"><br><br>
+          <h4>Burger Double</h4>
+          <label class="coret">Rp 35.000</label><br>
+          <label class="harga">Rp 30.000</label><br><br>
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal2">Lihat Gambar</button>
+        </div>
+      </div>
+      <div class="column">
+        <div class="text-center"><br>
+          <img src="images/BURGER_TRIPLE.png" class="gambar-menu"><br><br>
+          <h4>Burger Triple</h4>
+          <label class="coret">Rp 40.000</label><br>
+          <label class="harga">Rp 35.000</label><br><br>
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal3">Lihat Gambar</button></div>
+      </div>
+      <a href="#Download" style="text-align:center;">Lihat Lebih Banyak</a>
+    </div>
+  </section><br><br>
+  
   <section class="Lokasi" id="Lokasi"><br>
       <h3>Lokasi</h3>
-      <iframe class="centerimg" allowfullscreen="" frameborder="0" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5595.833710540271!2d109.23451616500648!3d-7.370484523356614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e655f9dbea632b9%3A0xd2a19061befda2b!2sLaqosta%20Farm!5e0!3m2!1sid!2sid!4v1662815629181!5m2!1sid!2sid" data-aos="fade-left" data-aos-duration="1000" width="50%" height="300px;" style="box-shadow: 0px 0px 10px rgb(0,0,0);" class="aos-init aos-animate"></iframe> <br>
-      <label class="labelket"> 1. Jalankan Website Smart Blindes<a href="">[Cari Disini]</a></label>
+      <iframe class="centerimg" allowfullscreen="" frameborder="0" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5595.833710540271!2d109.23451616500648!3d-7.370484523356614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e655f9dbea632b9%3A0xd2a19061befda2b!2sLaqosta%20Farm!5e0!3m2!1sid!2sid!4v1662815629181!5m2!1sid!2sid" data-aos="fade-left" data-aos-duration="1000" width="50%" height="400px;" style="box-shadow: 0px 0px 10px rgb(0,0,0);" class="aos-init aos-animate"></iframe> <br>
+      <!--<label class="labelket"> 1. Jalankan Website Smart Blindes<a href="">[Cari Disini]</a></label>-->
       <br></br>
   </section>
   <br> </br>
