--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <section class="Beranda" id="Beranda">
     <br><br>
     <h3>Tentang Meat Up<h3><br>
-    <iframe class="centerimg" width="560" height="360" src="https://www.youtube.com/embed/9rngAOMpw7A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="centerimg" width="560" height="360" src="https://www.youtube.com/embed/9rngAOMpw7A?rel=0&amp;vq=hd1080p60" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <!--<img class="centerimg" src="images/Banner_Meatup.png" style="width: 1200px; height: 400px;"><br><br>-->
     <label class="labelket">Meat Up Apps adalah sebuah aplikasi mobile yang digunakan untuk mempermudah pelanggan dan mempercepat dalam memesan dan memproses makanan burger.</label>
@@ -70,7 +70,7 @@
 
   <section class="Menu" id="Menu">
     <div class="row">
-      <h3>Menu Makanan</h3>
+      <h3>Menu Makanan<h3>
       <div class="column">
         <div class="text-center"><br>
           <img src="images/BURGER_SINGLE-remove.png" class="gambar-menu"><br><br>
@@ -147,7 +147,7 @@
   
   <section class="Testimoni" id="Testimoni">
     <div class="row">
-      <h3>Testimoni</h3>
+      <h3>Testimoni<h3>
       <div class="column">
         <div class="text-center"><br>
           <img src="images/BURGER_SINGLE-remove.png" class="gambar-menu"><br><br>
@@ -176,7 +176,7 @@
   
   <section class="Lokasi" id="Lokasi"><br>
       <h3>Lokasi</h3>
-      <iframe allowfullscreen="" frameborder="0" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5595.833710540271!2d109.23451616500648!3d-7.370484523356614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e655f9dbea632b9%3A0xd2a19061befda2b!2sLaqosta%20Farm!5e0!3m2!1sid!2sid!4v1662815629181!5m2!1sid!2sid" data-aos="fade-left" data-aos-duration="1000" width="50%" height="400px;" style="box-shadow: 0px 0px 10px rgb(0,0,0);" class="aos-init aos-animate"></iframe> <br>
+      <iframe allowfullscreen="" frameborder="0" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5595.833710540271!2d109.23451616500648!3d-7.370484523356614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e655f9dbea632b9%3A0xd2a19061befda2b!2sLaqosta%20Farm!5e0!3m2!1sid!2sid!4v1662815629181!5m2!1sid!2sid" data-aos="fade-left" data-aos-duration="1000" width="50%" height="300px;" style="box-shadow: 0px 0px 10px rgb(0,0,0);   display:"block"; margin-left: auto; margin-right: auto;" class="aos-init aos-animate"></iframe> <br>
       <!--<label class="labelket"> 1. Jalankan Website Smart Blindes<a href="">[Cari Disini]</a></label>-->
       <br>
   </section>
@@ -373,8 +373,6 @@
   }
 }
 @media (max-width: 868px) {
-  .navbar .logo {
-  }
   .navbar .logo a{
   margin-right: 0;
   color: #fff;
@@ -412,7 +410,6 @@
   height: 275px; /* Hanya untuk contoh */
   text-align: center;
   }
-/* Hapus floats setelah columns */
   .label {
   font-size: 15px;
   text-align: justify;
