--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <label class="harga">Rp 35.000</label><br><br>
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal3">Lihat Gambar</button></div>
       </div>
-      <a href="#Download" style="text-align:center;">Lihat Lebih Banyak</a>
+        <label><a href="#Download" style="text-align:center;">Lihat Lebih Banyak</a></label>
     </div>
   </section><br><br>
 
@@ -176,7 +176,7 @@
   
   <section class="Lokasi" id="Lokasi"><br>
       <h3>Lokasi</h3>
-      <iframe allowfullscreen="" frameborder="0" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5595.833710540271!2d109.23451616500648!3d-7.370484523356614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e655f9dbea632b9%3A0xd2a19061befda2b!2sLaqosta%20Farm!5e0!3m2!1sid!2sid!4v1662815629181!5m2!1sid!2sid" data-aos="fade-left" data-aos-duration="1000" width="50%" height="300px;" style="box-shadow: 0px 0px 10px rgb(0,0,0);   display:"block"; margin-left: auto; margin-right: auto;" class="aos-init aos-animate"></iframe> <br>
+      <iframe allowfullscreen="" frameborder="0" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5595.833710540271!2d109.23451616500648!3d-7.370484523356614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e655f9dbea632b9%3A0xd2a19061befda2b!2sLaqosta%20Farm!5e0!3m2!1sid!2sid!4v1662815629181!5m2!1sid!2sid" data-aos="fade-left" data-aos-duration="1000" width="50%" height="300px;" style="box-shadow: 0px 0px 10px rgb(0,0,0); display:block; margin-left: auto; margin-right: auto;" class="aos-init aos-animate"></iframe> <br>
       <!--<label class="labelket"> 1. Jalankan Website Smart Blindes<a href="">[Cari Disini]</a></label>-->
       <br>
   </section>
