--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <section class="Beranda" id="Beranda">
     <br><br>
     <h3>Tentang Meat Up<h3><br>
-    <iframe class="centerimg" width="560" height="360" src="https://www.youtube.com/embed/9rngAOMpw7A?rel=0&amp;vq=hd1080p60" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="centerimg" width="560" height="360" src="https://www.youtube.com/embed/9rngAOMpw7A?rel=0&amp;vq=hd1080p60" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
 
     <!--<img class="centerimg" src="images/Banner_Meatup.png" style="width: 1200px; height: 400px;"><br><br>-->
     <label class="labelket">Meat Up Apps adalah sebuah aplikasi mobile yang digunakan untuk mempermudah pelanggan dan mempercepat dalam memesan dan memproses makanan burger.</label>
@@ -96,7 +96,7 @@
           <label class="harga">Rp 35.000</label><br><br>
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal3">Lihat Gambar</button></div>
       </div>
-        <label><a href="#Download" style="text-align:center;">Lihat Lebih Banyak</a></label>
+        <label class="labelket"><a href="#Download" style="text-align:center;">Lihat Lebih Banyak</a></label>
     </div>
   </section><br><br>
 
@@ -143,7 +143,7 @@
       <img src="images/banner.png" class="centerimg">
       <label class="labelket"> 1. Jalankan Website Smart Blindes</label>
       <br></br>
-  </section>
+  </section><br>
   
   <section class="Testimoni" id="Testimoni">
     <div class="row">
@@ -176,7 +176,7 @@
   
   <section class="Lokasi" id="Lokasi"><br>
       <h3>Lokasi</h3>
-      <iframe allowfullscreen="" frameborder="0" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5595.833710540271!2d109.23451616500648!3d-7.370484523356614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e655f9dbea632b9%3A0xd2a19061befda2b!2sLaqosta%20Farm!5e0!3m2!1sid!2sid!4v1662815629181!5m2!1sid!2sid" data-aos="fade-left" data-aos-duration="1000" width="50%" height="300px;" style="box-shadow: 0px 0px 10px rgb(0,0,0); display:block; margin-left: auto; margin-right: auto;" class="aos-init aos-animate"></iframe> <br>
+      <iframe allowfullscreen="" frameborder="0" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5595.833710540271!2d109.23451616500648!3d-7.370484523356614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e655f9dbea632b9%3A0xd2a19061befda2b!2sLaqosta%20Farm!5e0!3m2!1sid!2sid!4v1662815629181!5m2!1sid!2sid" data-aos="fade-left" data-aos-duration="1000" width="90%" height="300px;" style="box-shadow: 0px 0px 10px rgb(0,0,0); display:block; margin-left: auto; margin-right: auto;" class="aos-init aos-animate"></iframe> <br>
       <!--<label class="labelket"> 1. Jalankan Website Smart Blindes<a href="">[Cari Disini]</a></label>-->
       <br>
   </section>
@@ -322,7 +322,9 @@
   width: 50%;
 }
 .column {
-  margin:0 0 20px 20px ;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 28%;
   border-radius: 10px;
   height: 360px; /* Hanya untuk contoh */
