--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         this.scrollY > 20 ? navbar.classList.add("sticky") : navbar.classList.remove("sticky");
       }
     </script>
-    <br> </br>  
+    
     <section class="Beranda" id="Beranda">
       <h3 class="judul">Tentang Meat Up</h3>
-      <iframe style="width:75%; height:300px; display:block; margin-left: auto; margin-right: auto;" src="https://www.youtube.com/embed/9rngAOMpw7A?rel=0&amp;vq=hd1080p60" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
+      <iframe style="width:80%; height:300px; display:block; margin-left: auto; margin-right: auto;" src="https://www.youtube.com/embed/9rngAOMpw7A?rel=0&amp;vq=hd1080p60" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
       <p class="keterangan"> Smart Blindes adalah hasil karya projek akhir yang dibuat oleh kelompok 7 kelas Al-Khawarizmi Orbit Future Academy yang dapat membantu seseorang penderita tuna netra.
       cara kerjanya adalah mengarahkan kamera ke segala arah untuk menemukan objek dan nantinya akan muncul suara sebagai petunjuk
       </p>
@@ -92,7 +92,7 @@
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal3">Lihat Gambar</button>
             </div>
           </div>
-      </div>
+      </div> <br>
       <p class="keterangan" style="text-align: center;"><a href="#Download">Lebih Banyak...</a></p>
     </section><br><br>
 
@@ -178,11 +178,11 @@
           </div>
         </div>
     </div>
-    </section>
+    </section><br><br>
 
     <section class="Lokasi" id="Lokasi"><br>
       <h3 class="judul">Lokasi</h3>
-      <iframe allowfullscreen="" frameborder="0" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5595.833710540271!2d109.23451616500648!3d-7.370484523356614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e655f9dbea632b9%3A0xd2a19061befda2b!2sLaqosta%20Farm!5e0!3m2!1sid!2sid!4v1662815629181!5m2!1sid!2sid" data-aos="fade-left" data-aos-duration="1000" width="75%" height="300px;" style="box-shadow: 0px 0px 10px rgb(0,0,0); display:block; margin-left: auto; margin-right: auto;" class="aos-init aos-animate"></iframe> <br>    <br>
+      <iframe allowfullscreen="" frameborder="0" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5595.833710540271!2d109.23451616500648!3d-7.370484523356614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e655f9dbea632b9%3A0xd2a19061befda2b!2sLaqosta%20Farm!5e0!3m2!1sid!2sid!4v1662815629181!5m2!1sid!2sid" data-aos="fade-left" data-aos-duration="1000" width="80%" height="300px;" style="box-shadow: 0px 0px 10px rgb(0,0,0); display:block; margin-left: auto; margin-right: auto;" class="aos-init aos-animate"></iframe> <br><br>
     </section>
 
     <section class="Download" id="Download">
@@ -256,7 +256,7 @@
   justify-content: right;
 }
 .navbar .logo a{
-  margin-right: 700px;
+  margin-right: 600px;
   color: #fff;
   text-decoration: none;
 }
@@ -279,7 +279,7 @@
   color: #007bff;
 }
 .banner{
-  background: url("images/Benner.png") no-repeat;
+  background: url("images/banner.png") no-repeat;
   opacity:0.7;
   height: 80vh;
   background-size: cover;
@@ -308,6 +308,10 @@
   right: 30px;
   top: 20px;
 }
+.btn{
+    font-size: 18px;
+    width: 75%;
+}
 @media (max-width: 1230px) {
   .content{
     padding: 0 60px;
@@ -325,7 +329,7 @@
 }
 @media (max-width: 868px) {
   .navbar .logo a{
-  margin-right: 100px;
+  margin-right: 50px;
   color: #fff;
   text-decoration: none;
   }
