--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <section class="Lokasi" id="Lokasi"><br>
       <h3 class="judul">Lokasi</h3>
       <iframe class="lokasi" allowfullscreen="" frameborder="0" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5595.833710540271!2d109.23451616500648!3d-7.370484523356614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e655f9dbea632b9%3A0xd2a19061befda2b!2sLaqosta%20Farm!5e0!3m2!1sid!2sid!4v1662815629181!5m2!1sid!2sid" data-aos="fade-left" data-aos-duration="1000" style="box-shadow: 0px 0px 10px rgb(0,0,0); class="aos-init aos-animate"></iframe> <br><br>
-    </section>
+    </section><br><br>
 
     <section class="Download" id="Download">
       <h3 class="judul">Download</h3>
@@ -281,7 +281,7 @@
 .banner{
   background: url("images/banner.png") no-repeat;
   opacity:0.7;
-  height: 60vh;
+  height: 400px;
   background-position: center;
   background-size:100% 50%;
 }
