--- a/index.html
+++ b/index.html
@@ -192,10 +192,7 @@
         <a href="https://drive.google.com/uc?export=download&id=1Aft8XLA2MUTgG8naTOp_kX9Qm5GlH1vL"><button type="button" class="btn btn-primary" style="align-items: center; width:50%">Download Aplikasi</button></a><br>
       </div>
     </section><br><br>
-
-  </body>
-
-
+</body>
 
   <footer>
     <a href="https://www.instagram.com/meatupidn/">
@@ -281,9 +278,9 @@
 .banner{
   background: url("images/banner.png") no-repeat;
   opacity:0.7;
-  height: 400px;
+  height: 600px;
   background-position: center;
-  background-size:100% 50%;
+  background-size:600px 50%;
 }
 .about{
   padding: 30px 0;
