--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
       <div class="container-fluid">
           <div class="row">
             <div class="col-12 col-sm-6 col-md-3 pt-5 pb-5">
-              <img src="images/BURGER_TRIPLE.png" class="gambar-menu"><br><br>
-              <h4>Burger Triple</h4>
-              <label class="coret">Rp 40.000</label><br>
-              <label class="harga">Rp 35.000</label><br><br>
+              <img src="images/BURGER_Single.png" class="gambar-menu"><br><br>
+              <h4>Burger Single</h4>
+              <label class="coret">Rp 30.000</label><br>
+              <label class="harga">Rp 25.000</label><br><br>
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal1">Lihat Gambar</button>
             </div>
             <div class="col-12 col-sm-6 col-md-3 pt-5 pb-5">
-              <img src="images/BURGER_TRIPLE.png" class="gambar-menu"><br><br>
-              <h4>Burger Triple</h4>
-              <label class="coret">Rp 40.000</label><br>
-              <label class="harga">Rp 35.000</label><br><br>
+              <img src="images/BURGER_Double.png" class="gambar-menu"><br><br>
+              <h4>Burger Double</h4>
+              <label class="coret">Rp 35.000</label><br>
+              <label class="harga">Rp 30.000</label><br><br>
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal2">Lihat Gambar</button>
             </div>
             <div class="col-12 col-sm-6 col-md-3 pt-5 pb-5">
@@ -183,9 +183,9 @@
     <section class="Lokasi" id="Lokasi"><br>
       <h3 class="judul">Lokasi</h3>
       <iframe class="lokasi" allowfullscreen="" frameborder="0" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5595.833710540271!2d109.23451616500648!3d-7.370484523356614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e655f9dbea632b9%3A0xd2a19061befda2b!2sLaqosta%20Farm!5e0!3m2!1sid!2sid!4v1662815629181!5m2!1sid!2sid" data-aos="fade-left" data-aos-duration="1000" style="box-shadow: 0px 0px 10px rgb(0,0,0); class="aos-init aos-animate"></iframe> <br><br>
-    </section><br><br>
+    </section>
 
-    <section class="Download" id="Download">
+    <section class="Download" id="Download"><br><br>
       <h3 class="judul">Download</h3>
       <img src="images/banner.png" class="centerimg"><br><br>
       <div class="text-center">
@@ -277,10 +277,12 @@
 }
 .banner{
   background: url("images/banner.png") no-repeat;
+  margin-top:0px;
+  margin-bottom:0px;
   opacity:0.7;
   height: 600px;
   background-position: center;
-  background-size:600px 50%;
+  background-size:100% 50%;
 }
 .about{
   padding: 30px 0;
