--- a/index.html
+++ b/index.html
@@ -280,9 +280,10 @@
   margin-top:0px;
   margin-bottom:0px;
   opacity:0.7;
-  height: 600px;
+  height: 100%;
   background-position: center;
   background-size:100% 50%;
+  object-fit:cover;
 }
 .about{
   padding: 30px 0;
@@ -344,7 +345,8 @@
   background-position: center;
   background-size:100% 50%;
   opacity:0.7;
-  height: 40vh;
+  height: 100%;
+  object-fit:cover;
   }
   .youtube{
   width:80%;
@@ -388,7 +390,7 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 90%;
+  width: 100%;
   height: 200px;
   }
   .gambar-menu{
