--- a/index.html
+++ b/index.html
@@ -343,7 +343,6 @@
   .banner{
   background: url("images/banner.png") no-repeat;
   background-position: center;
-  background-size:100% 50%;
   opacity:0.7;
   height: 100%;
   object-fit:cover;
@@ -388,8 +387,8 @@
   }
   .centerimg {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 3%;
+  margin-right: 3%;
   width: 100%;
   height: 200px;
   }
