--- a/index.html
+++ b/index.html
@@ -280,10 +280,9 @@
   margin-top:0px;
   margin-bottom:0px;
   opacity:0.7;
-  height: 100%;
+  height: 60vh;
   background-position: center;
   background-size:100% 50%;
-  object-fit:cover;
 }
 .about{
   padding: 30px 0;
@@ -321,8 +320,12 @@
     padding: 0 40px;
   }
 }
-
 @media (max-width: 900px) {
+  .content{
+    padding: 0 30px;
+  }
+}
+@media (max-width: 869px) {
   .navbar .logo a{
   margin-right: 20px;
   color: #fff;
@@ -339,9 +342,9 @@
   .banner{
   background: url("images/banner.png") no-repeat;
   background-position: center;
+  background-size:100% 50%;
   opacity:0.7;
-  height: 100%;
-  object-fit:cover;
+  height: 40vh;
   }
   .youtube{
   width:80%;
