--- a/index.html
+++ b/index.html
@@ -386,8 +386,8 @@
   }
   .centerimg {
   display: block;
-  margin-left: 3%;
-  margin-right: 3%;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
   height: 200px;
   }
